syntax = "proto3";

package pb;

option go_package = "githib.com/g41797/grpcadapter;pb";

import "status.proto";
import "manager.proto";


service ManagerService {
	rpc Manage(ManageRequest) returns (Status) {}
}
